--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ KDJ/News_Summarization/Data/문서요약 텍스트/Validation/법률_valid_origi
 KDJ/News_Summarization/Data/문서요약 텍스트/Validation/사설_valid_original.zip
 KDJ/News_Summarization/Data/문서요약 텍스트/Validation/신문기사_valid_original.zip
 KDJ/News_Summarization/Data/문서요약 텍스트/Validation/news_valid_original.json
+KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/train_preprocess_test.csv
