--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ KDJ/News_Summarization/Data/문서요약 텍스트/Validation/신문기사_valid
 KDJ/News_Summarization/Data/문서요약 텍스트/Validation/news_valid_original.json
 KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/train_preprocess_test.csv
 Gina/test.py
+Gina/fdfdf.py
