--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ News_Summarization/Data/문서요약 텍스트/Validation/news_valid_original.js
 KDJ/News_Summarization/Data/pickle/abs.pkl
 KDJ/News_Summarization/Data/pickle/sentences.pkl
 KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/finalPreprocess.csv
+KDJ/News_Summarization/Data/pickleTemp/abs.pkl
+KDJ/News_Summarization/Data/pickleTemp/sentences.pkl
+KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/tokenizerTemp.subwords
+KDJ/News_Summarization/Model/transformer.h5
+KDJ/News_Summarization/Model/trasformer.h5
+KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/finalPreprocessTemp.csv
