--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/tokenizerTemp.subw
 KDJ/News_Summarization/Model/transformer.h5
 KDJ/News_Summarization/Model/trasformer.h5
 KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/finalPreprocessTemp.csv
+KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/valid.csv
+KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/tokenizer.subwords
+KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/tokenizer.subwords
+KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/valid.csv
