--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/valid.csv
 KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/tokenizer.subwords
 KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/tokenizer.subwords
 KDJ/News_Summarization/Data/문서요약 텍스트/Preprocess/valid.csv
+KDJ/Financial_Chatbot/LSTM/Data/cleaned_df_final.csv
+KDJ/Financial_Chatbot/LSTM/Data/Dictionary_Validation.csv
+KDJ/Financial_Chatbot/LSTM/Data/new_df.csv
+KDJ/Financial_Chatbot/Transformers/combined_output.csv
+KDJ/Financial_Chatbot/LSTM/Data/preprocess.csv
