--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ KDJ/Financial_Chatbot/LSTM/Data/Dictionary_Validation.csv
 KDJ/Financial_Chatbot/LSTM/Data/new_df.csv
 KDJ/Financial_Chatbot/Transformers/combined_output.csv
 KDJ/Financial_Chatbot/LSTM/Data/preprocess.csv
+KDJ/Financial_Chatbot/Sequence2Sequence/Data/FINAL_AHA_data.csv
+KDJ/Financial_Chatbot/Sequence2Sequence/Data/FINAL_AIHUB_data.csv
