--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ KDJ/Financial_Chatbot/Transformers/combined_output.csv
 KDJ/Financial_Chatbot/LSTM/Data/preprocess.csv
 KDJ/Financial_Chatbot/Sequence2Sequence/Data/FINAL_AHA_data.csv
 KDJ/Financial_Chatbot/Sequence2Sequence/Data/FINAL_AIHUB_data.csv
+KDJ/Financial_Chatbot/Sequence2Sequence/Model/chatbot1.41995.h5
