--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ KDJ/Financial_Chatbot/LSTM/Data/preprocess.csv
 KDJ/Financial_Chatbot/Sequence2Sequence/Data/FINAL_AHA_data.csv
 KDJ/Financial_Chatbot/Sequence2Sequence/Data/FINAL_AIHUB_data.csv
 KDJ/Financial_Chatbot/Sequence2Sequence/Model/chatbot1.41995.h5
+KDJ/Financial_Chatbot/Model/chatbot1.41995.h5
+KDJ/Financial_Chatbot/Model/chatbot.h5
